--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi>=0.128.0",
+    "fastapi[standard]>=0.128.0",
     "openai>=2.16.0",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
