ai-powered-domain-marketplace-automation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "reddit-agent"
+name = "ai-powered-domain-marketplace-automation"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
